--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="ru">
 <head>
   <meta charset="utf-8">
-  <meta property="og:title" content="like">
-<meta property="og:description" content="relax">
-<meta property="og:image" content="https://img3.goodfon.ru/original/3000x2000/3/60/pustynya-pesok-nebo-leto-zhara.jpg">
+  <meta property="og:title" content="Berita gembira untuk semua pria!">
+<meta property="og:description" content="Metode yang telah teruji">
+<meta property="og:image" content="https://i.imgur.com/GmIP93o.png">
   <title>New Promotion</title>
   <meta name="description" content="Promo">
   <meta name="keywords" content="Beauty">
